# rustbridge

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTICES  README.md  SKILLS.md  TASKS.md  TESTING.md  clippy.toml  deny.toml
.github/workflows/: ci.yml
crates/rustbridge/: Cargo.toml
crates/rustbridge-bundle/: Cargo.toml
crates/rustbridge-bundle/src/: builder.rs  error.rs  lib.rs  loader.rs  manifest.rs  platform.rs
crates/rustbridge-cli/: Cargo.toml
crates/rustbridge-cli/src/: build.rs  bundle.rs  generate.rs  header_gen.rs  keygen.rs  main.rs  manifest.rs  new.rs
crates/rustbridge-cli/src/codegen/: ir.rs  java.rs  json_schema.rs  jvm_types.rs  mod.rs  naming.rs
crates/rustbridge-cli/src/generate/: generate_tests.rs
crates/rustbridge-cli/src/manifest/: manifest_tests.rs
crates/rustbridge-cli/templates/csharp/: .gitignore  Consumer.csproj.tmpl  README.md
crates/rustbridge-cli/templates/java-ffm/: build.gradle.kts  settings.gradle.kts.tmpl
crates/rustbridge-cli/templates/java-ffm/gradle/wrapper/: gradle-wrapper.properties
crates/rustbridge-cli/templates/java-jni/: README.md  build.gradle.kts
crates/rustbridge-cli/templates/java-jni/src/main/java/com/example/: Main.java.tmpl
crates/rustbridge-cli/templates/kotlin/: LICENSE  build.gradle.kts  settings.gradle.kts.tmpl
crates/rustbridge-cli/templates/kotlin/src/main/kotlin/com/example/: Main.kt.tmpl
crates/rustbridge-cli/templates/python/: .gitignore  README.md
crates/rustbridge-cli/templates/rust/src/: lib.rs.tmpl
crates/rustbridge-cli/tests/: bundle_integration_tests.rs
crates/rustbridge-core/: Cargo.toml
crates/rustbridge-core/src/: config.rs  error.rs  lib.rs  lib_tests.rs  lifecycle.rs  plugin.rs  request.rs
crates/rustbridge-core/src/config/: config_parameterized_tests.rs  config_tests.rs
crates/rustbridge-core/src/error/: error_parameterized_tests.rs  error_tests.rs
crates/rustbridge-core/src/lifecycle/: lifecycle_parameterized_tests.rs  lifecycle_tests.rs
crates/rustbridge-core/src/plugin/: plugin_tests.rs
crates/rustbridge-core/src/request/: request_tests.rs
crates/rustbridge-ffi/: Cargo.toml
crates/rustbridge-ffi/src/: binary_types.rs  buffer.rs  exports.rs  handle.rs  lib.rs  panic_guard.rs
crates/rustbridge-ffi/src/binary_types/: binary_types_tests.rs
crates/rustbridge-ffi/src/buffer/: buffer_tests.rs
crates/rustbridge-ffi/src/exports/: exports_tests.rs  ffi_boundary_tests.rs
crates/rustbridge-ffi/src/handle/: handle_tests.rs
crates/rustbridge-ffi/src/panic_guard/: panic_guard_tests.rs
crates/rustbridge-ffi/tests/: concurrency_tests.rs  ffi_integration_tests.rs  handle_leak_tests.rs  proptest_ffi.proptest-regressions  proptest_ffi.rs
crates/rustbridge-jni/: Cargo.toml
crates/rustbridge-jni/src/: error.rs  ffi_types.rs  lib.rs  loader.rs
crates/rustbridge-logging/: Cargo.toml
crates/rustbridge-logging/src/: callback.rs  layer.rs  lib.rs  reload.rs
crates/rustbridge-logging/src/callback/: callback_tests.rs
crates/rustbridge-logging/src/layer/: layer_tests.rs
crates/rustbridge-macros/: Cargo.toml
crates/rustbridge-macros/src/: lib.rs  lib_tests.rs
crates/rustbridge-runtime/: Cargo.toml
crates/rustbridge-runtime/src/: bridge.rs  lib.rs  runtime.rs  shutdown.rs
crates/rustbridge-runtime/src/bridge/: bridge_tests.rs
crates/rustbridge-runtime/src/runtime/: runtime_tests.rs
crates/rustbridge-runtime/src/shutdown/: shutdown_tests.rs
crates/rustbridge-transport/: Cargo.toml
crates/rustbridge-transport/benches/: binary_comparison.rs  json_baseline.rs
crates/rustbridge-transport/src/: codec.rs  envelope.rs  lib.rs
crates/rustbridge-transport/src/codec/: codec_tests.rs
crates/rustbridge-transport/src/envelope/: envelope_tests.rs
crates/rustbridge-transport/tests/: proptest_transport.proptest-regressions  proptest_transport.rs
crates/rustbridge/src/: lib.rs
docs/: ARCHITECTURE.md  BENCHMARK_RESULTS.md  BINARY_TRANSPORT.md  BUNDLE_ARCHITECTURE.md  BUNDLE_FORMAT.md  CODE_GENERATION.md  DEBUGGING.md  ERROR_HANDLING.md  GETTING_STARTED.md  MACOS_VERIFICATION.md  MACOS_VERIFICATION_RESULTS.md  MEMORY_MODEL.md  PHASE1_COMPLETION_SUMMARY.md  PLAN_BUNDLE_FORMAT_V2.md  PLUGIN_LIFECYCLE.md  PLUGIN_RELOAD_STATUS.md  PRE_1.0_REFINEMENTS.md  PRE_MULTI_LANGUAGE_SCOPE.md  PUBLISHING.md  RELOAD_SAFETY_ANALYSIS.md  RELOAD_TEST_RESULTS.md  SKILLS.md  TASKS.md  TESTING.md  TESTING_CSHARP.md  TESTING_JAVA.md  TESTING_KOTLIN.md  TESTING_PYTHON.md  TRANSPORT.md  WINDOWS_VERIFICATION.md  WINDOWS_VERIFICATION_RESULTS.md
docs/creating-plugins/: README.md
docs/getting-started/: CSHARP.md  JAVA_FFM.md  KOTLIN.md  PYTHON.md
docs/packaging/: README.md
docs/tutorials/: README.md
examples/hello-plugin/: Cargo.toml  rustbridge.toml
examples/hello-plugin/src/: binary_messages.rs  lib.rs  lib_tests.rs
examples/json-plugin/: Cargo.toml
examples/json-plugin/src/: lib.rs
examples/regex-plugin/: Cargo.toml  README.md
examples/regex-plugin/src/: lib.rs
include/: rustbridge_types.h
rustbridge-csharp/: .gitignore  Directory.Build.props  README.md  RustBridge.sln
rustbridge-java/: .gitignore  build.gradle.kts  settings.gradle.kts
rustbridge-python/: .gitignore  README.md  pyproject.toml
rustbridge-python/rustbridge/: __init__.py
rustbridge-python/rustbridge/core/: __init__.py  bundle_loader.py  bundle_manifest.py  lifecycle_state.py  log_level.py  minisign_verifier.py  plugin_config.py  plugin_exception.py  response_envelope.py
rustbridge-python/rustbridge/native/: __init__.py  library.py  native_plugin.py  plugin_loader.py  structures.py
rustbridge-python/tests/: __init__.py  conftest.py  test_benchmarks.py  test_binary_transport.py  test_bundle_loader.py  test_concurrency.py  test_hello_plugin_integration.py  test_lifecycle_state.py  test_log_level.py  test_minisign_verifier.py  test_plugin_config.py  test_resource_leak.py
scripts/: README.md  build-linux-bundle.sh  pre-commit.bat  pre-commit.sh
templates/plugin/: Cargo.toml  README.md
templates/plugin/src/: lib.rs
(+238 files in other folders)
