[workspace]
resolver = "2"
members = [
    "crates/rustbridge-core",
    "crates/rustbridge-transport",
    "crates/rustbridge-ffi",
    "crates/rustbridge-runtime",
    "crates/rustbridge-logging",
    "crates/rustbridge-macros",
    "crates/rustbridge-bundle",
    "crates/rustbridge-cli",
    "crates/rustbridge-jni",
    "examples/hello-plugin",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustbridge/rustbridge"
rust-version = "1.85"

[workspace.dependencies]
# Internal crates
rustbridge-core = { path = "crates/rustbridge-core" }
rustbridge-transport = { path = "crates/rustbridge-transport" }
rustbridge-ffi = { path = "crates/rustbridge-ffi" }
rustbridge-runtime = { path = "crates/rustbridge-runtime" }
rustbridge-logging = { path = "crates/rustbridge-logging" }
rustbridge-macros = { path = "crates/rustbridge-macros" }
rustbridge-bundle = { path = "crates/rustbridge-bundle" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Proc macros
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
darling = "0.20"

# CLI
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"

# Utilities
uuid = { version = "1.11", features = ["v4"] }
parking_lot = "0.12"
once_cell = "1.19"
dashmap = "5.5"

# Archive handling
zip = "2.2"
sha2 = "0.10"
hex = "0.4"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# ============================================================================
# Workspace Lints Configuration
# ============================================================================
# These lints are inherited by all workspace members via `[lints] workspace = true`

[workspace.lints.clippy]
# Safety: Prevent panics in production code
unwrap_used = "warn"        # Use ? or proper error handling instead of .unwrap()
expect_used = "warn"        # Use ? or proper error handling instead of .expect()

# Safety: Prevent deadlocks
await_holding_lock = "deny" # Never hold a lock across .await points

# Note: To allow .unwrap()/.expect() where it's truly safe, use:
#   #[allow(clippy::unwrap_used)] // Safe: <reason>
#   let value = something.unwrap();
#
# Tests and examples are configured separately to allow these patterns.
