[package]
name = "rustbridge-bundle"
description = "Plugin bundle format for rustbridge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["ffi", "plugin", "bundle", "packaging", "distribution"]
categories = ["development-tools::ffi", "development-tools::build-utils"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
zip = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
minisign = "0.7"

[dev-dependencies]
tempfile = "3.9"

[lints]
workspace = true
