[package]
name = "rustbridge-bundle"
description = "Plugin bundle format for rustbridge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "../../README.md"
keywords = ["ffi", "plugin", "bundle", "packaging", "distribution"]
categories = ["development-tools::ffi", "development-tools::build-utils"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
zip = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
minisign = "0.8"

[dev-dependencies]
tempfile = "3.24"
base64 = "0.22"

[lints]
workspace = true
