[package]
name = "rustbridge-cli"
description = "Build tool and code generator for rustbridge"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "rustbridge"
path = "src/main.rs"

[dependencies]
rustbridge-bundle = { workspace = true }
rustbridge-core = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
cc = "1.0"
minisign = "0.7"
rpassword = "7.3"
tempfile = "3.9"

[dev-dependencies]
