[package]
name = "rustbridge-core"
description = "Core traits, types, and lifecycle management for rustbridge"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
test-case = { workspace = true }

[lints]
workspace = true
