[package]
name = "rustbridge-jni"
description = "JNI bindings for rustbridge - enables Java 17+ support"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "../../README.md"
keywords = ["ffi", "jni", "java", "plugin", "interop"]
categories = ["development-tools::ffi", "api-bindings"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# JNI bindings
jni = "0.21"

# Dynamic library loading
libloading = "0.9"

# Internal crates
# NOTE: We do NOT link against rustbridge-ffi to avoid symbol resolution conflicts
# with the plugin's own rustbridge-ffi linkage. All FFI types are defined locally.
rustbridge-core = { workspace = true }

# Serialization
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Tracing (for debug logging)
tracing = { workspace = true }

# Note: We don't use workspace lints because this crate needs to allow
# unwrap/expect since JNI error handling is fundamentally different.
# The Mutex guard unwrap() is safe because we never hold it across await points.
[lints.clippy]
unwrap_used = "allow"
expect_used = "allow"
await_holding_lock = "deny"
