[package]
name = "rustbridge-logging"
description = "Tracing to FFI callback bridge for rustbridge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["ffi", "plugin", "logging", "tracing", "callback"]
categories = ["development-tools::ffi", "development-tools::debugging"]

[dependencies]
rustbridge-core = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
