[package]
name = "rustbridge-macros"
description = "Procedural macros for rustbridge plugins"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
darling = { workspace = true }

[dev-dependencies]
rustbridge-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
trybuild = "1.0"
