[package]
name = "rustbridge-macros"
description = "Procedural macros for rustbridge plugins"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["ffi", "plugin", "proc-macro", "codegen", "macros"]
categories = ["development-tools::ffi", "development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
darling = { workspace = true }

[dev-dependencies]
rustbridge-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
trybuild = "1.0"

[lints]
workspace = true
