[package]
name = "rustbridge-runtime"
description = "Tokio async runtime integration for rustbridge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["ffi", "plugin", "async", "tokio", "runtime"]
categories = ["development-tools::ffi", "asynchronous"]

[dependencies]
rustbridge-core = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
