[package]
name = "rustbridge-transport"
description = "JSON codec and serialization layer for rustbridge"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rustbridge-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
criterion = { workspace = true }

[[bench]]
name = "json_baseline"
harness = false

[[bench]]
name = "binary_comparison"
harness = false
