[package]
name = "hello-plugin"
description = "Example rustbridge plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
rustbridge = { workspace = true }
uuid = { workspace = true }

# Serde is needed as a direct dependency because derive macros expand to
# code that references ::serde:: directly
serde = { workspace = true }

# Example plugin - explicitly configure lints (can't override workspace lints)
# Allow unwrap/expect since examples should be simple and clear
[lints.clippy]
await_holding_lock = "deny"  # Still enforce lock safety
