[package]
name = "json-plugin"
version = "0.6.0"
edition = "2021"
description = "A rustbridge plugin for JSON validation and pretty-printing"

[workspace]  # Standalone project (not part of a parent workspace)

[lib]
crate-type = ["cdylib"]

[dependencies]
rustbridge = "0.6"

# Serde is needed as a direct dependency because derive macros expand to
# code that references ::serde:: directly
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.35", features = ["rt", "macros"] }
