[package]
name = "regex-plugin"
version = "0.6.0"
edition = "2021"
description = "A rustbridge plugin demonstrating regex matching with LRU caching"

[workspace]  # Standalone project (not part of a parent workspace)

[lib]
crate-type = ["cdylib"]

[dependencies]
rustbridge = "0.6"

# Serde is needed as a direct dependency because derive macros expand to
# code that references ::serde:: directly
serde = { version = "1.0", features = ["derive"] }

# Additional dependencies for the regex plugin
lru = "0.12"
regex = "1.10"

[dev-dependencies]
tokio = { version = "1.35", features = ["rt", "macros"] }
