[package]
name = "my-plugin"
version = "0.1.0"
edition = "2021"

[workspace]  # Standalone project (not part of a parent workspace)

[lib]
crate-type = ["cdylib"]

[dependencies]
# rustbridge dependencies (fetched from GitHub)
rustbridge-core = { git = "https://github.com/jrobhoward/rustbridge.git" }
rustbridge-ffi = { git = "https://github.com/jrobhoward/rustbridge.git" }
rustbridge-macros = { git = "https://github.com/jrobhoward/rustbridge.git" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
